# mkhot

./: .clang-format  .gitignore  CMakeLists.txt  README.md  mkhot.cpp
src/: CMakeLists.txt  mkhot.cpp
